--- a/package.json
+++ b/package.json
@@ -22,8 +22,12 @@
   "devDependencies": {
     "eslint": "^7.13.0",
     "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^7.0.0",
     "eslint-plugin-import": "^2.22.1",
-    "nyc": "^15.1.0"
+    "eslint-plugin-prettier": "^3.2.0",
+    "nyc": "^15.1.0",
+    "prettier": "^2.2.1"
   },
   "dependencies": {
     "axios": "^0.21.0",
