--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "api/server.js",
   "scripts": {
-    "lint": "./node_modules/.bin/eslint --fix server",
+    "lint": "./node_modules/.bin/eslint --fix api",
     "start": "nodemon api/server.js",
     "test": "NODE_ENV=test node_modules/.bin/mocha --opts server/mocha.opts --exit",
     "tests": "NODE_ENV=test nyc node_modules/.bin/mocha --opts server/mocha.opts server/tests/*.js --exit"
