--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "prettier": "^2.2.1"
   },
   "dependencies": {
+    "@types/cheerio": "^0.22.30",
     "axios": "^0.21.0",
     "body-parser": "^1.19.0",
     "chai": "^4.2.0",
@@ -47,6 +48,7 @@
     "nodemon": "^2.0.6",
     "redis": "^3.0.2",
     "supertest": "^6.0.1",
+    "typescript": "^4.4.3",
     "winston": "^3.3.3"
   }
 }
