--- a/package.json
+++ b/package.json
@@ -2,53 +2,55 @@
   "name": "gift-cards-api",
   "version": "1.0.0",
   "description": "",
-  "main": "api/server.js",
+  "main": "index.js",
   "scripts": {
-    "lint": "./node_modules/.bin/eslint --fix api",
-    "start": "nodemon api/server.js",
-    "test": "NODE_ENV=test node_modules/.bin/mocha --opts server/mocha.opts --exit",
-    "tests": "NODE_ENV=test nyc node_modules/.bin/mocha --opts server/mocha.opts server/tests/*.js --exit"
+    "start": "NODE_ENV=development nodemon --exec babel-node src/index.ts --extensions \".ts,.js\"",
+    "tsc": "tsc --noEmit",
+    "build": "npm run tsc && babel src -d dist --extensions \".ts\"",
+    "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/danielcpan/gift-cards-api.git"
-  },
-  "author": "",
+  "author": "Daniel Pan",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/danielcpan/gift-cards-api/issues"
-  },
-  "homepage": "https://github.com/danielcpan/gift-cards-api#readme",
-  "devDependencies": {
-    "eslint": "^7.13.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-prettier": "^7.0.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-prettier": "^3.2.0",
-    "nyc": "^15.1.0",
-    "prettier": "^2.2.1"
-  },
   "dependencies": {
-    "@types/cheerio": "^0.22.30",
-    "axios": "^0.21.0",
-    "body-parser": "^1.19.0",
-    "chai": "^4.2.0",
-    "cheerio": "^1.0.0-rc.3",
+    "axios": "^0.21.4",
+    "chai": "^4.3.4",
+    "cheerio": "^1.0.0-rc.10",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "express-validation": "^3.0.6",
-    "express-winston": "^4.0.5",
-    "helmet": "^4.2.0",
-    "http-status": "^1.4.2",
-    "mocha": "^8.2.1",
-    "mongoose": "^5.10.13",
+    "express-jwt": "^6.0.0",
+    "express-validation": "^3.0.8",
+    "express-winston": "^4.1.0",
+    "helmet": "^4.6.0",
+    "http-status": "^1.5.0",
+    "joi": "^17.4.1",
+    "mocha": "^9.0.2",
+    "mongoose": "^5.13.2",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.6",
-    "redis": "^3.0.2",
-    "supertest": "^6.0.1",
-    "typescript": "^4.4.3",
+    "nodemon": "^2.0.12",
+    "redis": "^3.1.2",
+    "supertest": "^6.1.3",
     "winston": "^3.3.3"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.14.5",
+    "@babel/core": "^7.14.6",
+    "@babel/node": "^7.14.7",
+    "@babel/preset-env": "^7.14.7",
+    "@babel/preset-typescript": "^7.14.5",
+    "@types/compression": "^1.7.1",
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/morgan": "^1.9.3",
+    "@typescript-eslint/eslint-plugin": "^4.28.2",
+    "@typescript-eslint/parser": "^4.28.2",
+    "babel-plugin-module-resolver": "^4.1.0",
+    "eslint": "^7.30.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "nyc": "^15.1.0",
+    "prettier": "^2.3.2",
+    "typescript": "^4.3.5"
   }
 }
