--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "helmet": "^4.6.0",
     "http-status": "^1.5.0",
     "joi": "^17.4.1",
+    "json2csv": "^5.0.6",
     "mocha": "^9.0.2",
     "mongoose": "^5.13.2",
     "morgan": "^1.10.0",
