Added 2 days worth of imports

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,11 +2,7 @@
   "compilerOptions": {
     "strict": false,
     "esModuleInterop": true,
-    "baseUrl": ".",
-    "paths": {
-      "~/*": ["src/*"],
-      "config": ["./config"]
-    }
+    "baseUrl": "."
   },
   "include": ["src/**/*"]
 }
