--- a/.babelrc
+++ b/.babelrc
@@ -1,14 +1,3 @@
 {
-  "presets": ["@babel/preset-env", "@babel/preset-typescript"],
-  "plugins": [
-    [
-      "module-resolver",
-      {
-        "alias": {
-          "~": "./src",
-          "config": "./config"
-        }
-      }
-    ]
-  ]
+  "presets": ["@babel/preset-env", "@babel/preset-typescript"]
 }
