Added a bunch of imports

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "strict": false,
     "esModuleInterop": true,
+    "resolveJsonModule": true,
     "baseUrl": "."
   },
   "include": ["src/**/*"]
